--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <br>
             <!-- <a href="javascript:toggle_bio()">Formal Bio</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
             <a href="https://github.com/esfrankel">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://scholar.google.com/citations?user=q7nFtUcAAAAJ&hl=en">G. Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://scholar.google.com/citations?user=bK3wI10AAAAJ&hl=en">G. Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://www.linkedin.com/in/esfrankel">LinkedIn</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://twitter.com/esfrankel">Twitter</a>
             <br><br>
