--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
           <h1>Eric Frankel</h1>
           <p>
             Hello! I'm a first year Ph.D. student at the University of Washington, where I am co-advised by <a href="https://homes.cs.washington.edu/~sewoong/">Sewoong Oh</a> and <a href="https://faculty.washington.edu/ratliffl/">Lillian Ratliff</a>.
-            My research focuses on using tools from statistics and optimization to better understand ML models and make them more robust and reliable.
-            Previously, I graduated from Stanford University with degrees in math and statistics.
+            I am fortunate to be newly supported by the <a href="https://www.nsfgrfp.org/">NSF Graduate Research Fellowship</a>.
+            <br>
+            <br>
+            Previously, I graduated from Stanford University with a B.S. with Honors in Mathematics and a M.S. in Statistics, advised by <a href="https://candes.su.domains/">Emmanuel Candès</a>.
+            I was also affiliated with the <a href="https://ai.stanford.edu/">Stanford AI Lab</a> and worked with <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a> and <a href="https://stanford.edu/~eadeli/">Ehsan Adeli</a>.
             <br>
             <!-- <div id="more-bio" style="display: None">
               <br>
